# Matan

./: .clang-format  CMakeLists.txt  README.md  REPORT.md  config.ini
.github/workflows/: win-mingw.yml  windows.yml
apps/desktop/: package-lock.json  package.json
apps/desktop/src/: App.css  App.tsx
apps/desktop/src-tauri/: tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  matan.rs
core/: config.ini
core/include/: CentralDifference.h  Config.h  DichotomyMinimizer.h  Differentiator.h  Expression.h  Expression.h.bak  GoldenSectionMinimizer.h  LeftDifference.h  Minimizer.h  ResultWriter.h  RightDifference.h  Task.h  Task1.h  Task2.h  Task2Runner.h  TaskFactory.h  TaskTypes.h
core/src/: CentralDifference.cc  Config.cc  DichotomyMinimizer.cc  DiffCommon.h  Differentiator.cc  Expression.cc  GoldenSectionMinimizer.cc  LeftDifference.cc  Minimizer.cc  ResultWriter.cc  RightDifference.cc  Task1.cc  Task2.cc  Task2Runner.cc  TaskFactory.cc  expr_demo.cc  main.cc
tmpdata/: task2_derivative.txt
